# apple-mcp-wrapper

./: .gitignore  README.md  blues_you_can_use_targets.json  bluessoul_targets.json  damn_thats_strong_targets.json  inspect_bluessoul.py  inspect_playlists.py  morris_day_targets.json  new_belly_rubbin_targets.json  populate_one.py  populate_pending_three.py  populate_soul_power.py  populate_suggestions.py  pyproject.toml  soul_power_doc.py
apple_mcp_wrapper/: automation.py  catalog.py  musickit.py  server.py
src/apple_mcp_wrapper/: automation.py  server.py
tests/: test_catalog.py
